=== HEAD

* Add :auto_increment key to schema information for primary key columns (jeremyevans) (#919)

* Fix handling of schema qualified tables in many_through_many associations (jeremyevans)

=== 4.17.0 (2014-12-01)

* Fix handling of Sequel::SQL::Blob instances in bound variables in the postgres adapter (jeremyevans) (#917)

* Add :preconnect Database option for immediately creating the maximum number of connections (jeremyevans)

* Support DB.pool.max_size for the single connection pools (jeremyevans)

* Work around regression in jdbc-sqlite3 3.8.7 where empty blobs are returned as nil (jeremyevans)

* Work around regression in jdbc-sqlite3 3.8.7 when using JDBC getDate method for date parsing (jeremyevans)

* Make Model#update_or_create return object if existing object exists but updates are not necessary (contentfree) (#916)

* Add Dataset#server? for conditionally setting a default server to use if no default is present (jeremyevans)

* Add Database#sharded? for determining if database uses sharding (jeremyevans)

* Fix server used by Dataset#insert_select on PostgreSQL (jeremyevans)

* Fix server used for deleting model instances when using sharding (jeremyevans)

=== 4.16.0 (2014-11-01)

* Make Database#create_table? and #create_join_table? not use IF NOT EXISTS if indexes are being added (jeremyevans) (#904)

* Dataset#distinct now accepts virtual row blocks (chanks) (#901)

* Recognize disconnect errors in the postgres adapter when SSL is used (jeremyevans) (#900)

* Stop converting '' default values to nil default values on MySQL (jeremyevans)

* Add Model#qualified_pk_hash, for returning a hash with qualified pk keys (jeremyevans)

* Make validates_unique use a qualified primary key if the dataset is joined (jeremyevans) (#895)

* Make Sequel::Model.cache_associations = false skip the database's schema cache when loading the schema (jeremyevans)

* Make Database#foreign_key_list work on Microsoft SQL Server 2005 (jeremyevans)
